--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.11.11",
     "@planetscale/database": "^1.6.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
