--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "autoprefixer": "^10.4.14",
     "drizzle-kit": "^0.17.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7"
   }
 }
