--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "drizzle-orm": "^0.22.0",
+    "@upstash/redis": "^1.20.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "fp-ts": "^2.13.1",
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "drizzle-kit": "^0.17.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.5",
