--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@upstash/redis": "^1.20.1",
+    "buffer": "^6.0.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "fp-ts": "^2.13.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
