--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "edge-link-shortener",
+  "name": "spores",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@planetscale/database": "^1.6.0",
+    "@prisma/client": "^4.11.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -27,6 +31,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
   }
 }
